[package]
name = "blitz-dl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
anyrender = "0.6.0"
blitz-dom = { version = "0.2.4", default-features = false, features = ["file_input", "svg", "woff-rust"] }
blitz-html = "0.2.0"
blitz-paint = "0.2.1"
blitz-traits = "0.2.0"
console_error_panic_hook = "0.1.7"
fontique = { version = "0.6.0", default-features = false }
js-sys = "0.3.85"
vello = "0.6.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["OffscreenCanvas", "WebGl2RenderingContext"] }
wgpu = { version = "26.0.1", default-features = false, features = ["fragile-send-sync-non-atomic-wasm", "web"] }
